--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Leopard | Presenting India Ka Bike | India's Fastest Bike Ever</title>
+    <title>Leopard | Katsikis Tuning & Service | Ανταλλακτικα αυτοκινητων $ μηχανων</title>
 
 </head>
 
@@ -83,8 +83,7 @@
                                 <i class="fa fa-wrench" aria-hidden="true"></i>
                             </div>
                             <h4>Repair</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus aliquid perferendis
-                                inventore fugit magnam quod atque dicta nemo. </p>
+                            <p>Παντως τυπου επισκευες μηχανολογικες & ηλεκτρολογικες </p>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -93,8 +92,7 @@
                                 <i class="fa fa-clock-o" aria-hidden="true"></i>
                             </div>
                             <h4>Speed</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus aliquid perferendis
-                                inventore fugit magnam quod atque dicta nemo. </p>
+                            <p>Αμεση αποστολη πακετου με ασφαλεια και ταχυτητα. </p>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -103,8 +101,7 @@
                                 <i class="fa fa-cog" aria-hidden="true"></i>
                             </div>
                             <h4>Spare Parts</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus aliquid perferendis
-                                inventore fugit magnam quod atque dicta nemo. </p>
+                            <p>Τα καλυτερα ανταλακτικα πληρως λειτουργικα και στην καλυτερη τιμη της αγορας </p>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -112,9 +109,8 @@
                             <div class="icon">
                                 <i class="fa fa-balance-scale" aria-hidden="true"></i>
                             </div>
-                            <h4>Tire Sales</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti temporibus aliquid perferendis
-                                inventore fugit magnam quod atque dicta nemo. </p>
+                            <h4>Εμπειρια</h4>
+                            <p>Πολυετη εμπειρια στο χωρο του αυτοκινητου και της μηχανης. </p>
                         </div>
                     </div>
                 </div>
