--- a/index.html
+++ b/index.html
@@ -258,13 +258,8 @@
                 <hr>
                 <br>
                 <p>
-                    Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                    ut aliquip ex ea commodo consequat.
+                   Katsikis Tuning and Service
+                    6987702486
                 </p>
             </div>
         </section>
@@ -309,12 +304,12 @@
                     <div class="col-md-3">
                         <h4 class="sectionSubSubHead">Mail Us</h4>
                         <ul class="list-unstyled">
-                            <li>Leopard Pvt. Ltd.</li>
-                            <li>Saltlake, Kolkata</li>
-                            <li>West Bengal, India</li>
+                            <li>Greece. Ltd.</li>
+                            <li>Athens </li>
+                            <li>Athens </li>
                             <li>Pin: 700XXX</li>
-                            <li>Phone: +91 9xxxxxxxx</li>
-                            <li>Email: example@domain.com</li>
+                            <li>Phone:  6987702486</li>
+                            <li>Email: akis.k59@gmail.com</li>
                         </ul>
                     </div>
                 </div>
@@ -325,7 +320,7 @@
 
     <footer class="footer">
         <div class="container">
-            Copyright © 2017-18
+            Copyright © 2024 designed by Mr Tom
             <span style="color:#f20056;">
                 Leopard Pvt. Ltd.
             </span>
