--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="col-md-3">
                         <div class="item-box">
                             <div class="item-box-img">
-                                <img src="./img/bike1.jpg">
+                                <img src="./bike1.jpg">
                             </div>
                             <div class="item-box-head">Bikes</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
@@ -142,7 +142,7 @@
                     <div class="col-md-3">
                         <div class="item-box">
                             <div class="item-box-img">
-                                <img src="./img/bike.jpg">
+                                <img src="./bike.jpg">
                             </div>
                             <div class="item-box-head">Helmets</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
@@ -152,7 +152,7 @@
                     <div class="col-md-3">
                         <div class="item-box">
                             <div class="item-box-img">
-                                <img src="./img/bike2.jpg">
+                                <img src="./bike1.jpg">
                             </div>
                             <div class="item-box-head">Wheels</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
@@ -162,7 +162,7 @@
                     <div class="col-md-3">
                         <div class="item-box">
                             <div class="item-box-img">
-                                <img src="./img/bike3.jpg">
+                                <img src="./bike1.jpg">
                             </div>
                             <div class="item-box-head">Cloths</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
@@ -176,7 +176,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="./img/bike.jpg" alt="bike">
+                            <img class="card-img-top" src="./bike.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
@@ -187,7 +187,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="./img/bike2.jpg" alt="bike">
+                            <img class="card-img-top" src="./bike1.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
@@ -198,7 +198,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="./img/bike1.jpg" alt="bike">
+                            <img class="card-img-top" src="./bike1.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
@@ -212,7 +212,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="./img/bike2.jpg" alt="bike">
+                            <img class="card-img-top" src="./bike.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
@@ -223,7 +223,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="./img/bike.jpg" alt="bike">
+                            <img class="card-img-top" src="./bike1.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
@@ -234,7 +234,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src="./img/bike3.jpg" alt="bike">
+                            <img class="card-img-top" src=".//bike.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
