--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="wellcome">
                 <div class="wellcomeMsg">
                     <div class="headTag">Leopard</div>
-                    <div class="subTag">Presenting India ka Bike | India's Fastest Bike Ever</div>
+                    <div class="subTag">Katsikis Tuning & Service | Ανταλλακτικα αυτοκινητων $ μηχανων</div>
                 </div>
             </div>
         </section>
@@ -134,7 +134,7 @@
                             <div class="item-box-img">
                                 <img src="./bike1.jpg">
                             </div>
-                            <div class="item-box-head">Bikes</div>
+                            <div class="item-box-head"Μηχανικα κομματια</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
@@ -144,7 +144,7 @@
                             <div class="item-box-img">
                                 <img src="./bike.jpg">
                             </div>
-                            <div class="item-box-head">Helmets</div>
+                            <div class="item-box-head"Εξωτερικα κομματια</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
@@ -154,7 +154,7 @@
                             <div class="item-box-img">
                                 <img src="./bike1.jpg">
                             </div>
-                            <div class="item-box-head">Wheels</div>
+                            <div class="item-box-head"Ζαντες κ λαστιχα</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
@@ -164,15 +164,15 @@
                             <div class="item-box-img">
                                 <img src="./bike1.jpg">
                             </div>
-                            <div class="item-box-head">Cloths</div>
-                            <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                            <div class="item-box-head">Ρουχα</div>
+                            <div class="item-box-sub-text">Αγορασε τωρα φουτερ >Katsikis Tuning & Service και κερδισε -10% εκπτωση στην επομενη αγορα .</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
                     </div>
                 </div>
 
 
-                <div class="sectionSubHead">Newly Arrived</div>
+                <div class="sectionSubHead">Νεες παραλαβες</div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card">
