--- a/index.html
+++ b/index.html
@@ -306,8 +306,7 @@
                         <ul class="list-unstyled">
                             <li>Greece. Ltd.</li>
                             <li>Athens </li>
-                            <li>Athens </li>
-                            <li>Pin: 700XXX</li>
+                            <li>TK: 700XXX</li>
                             <li>Phone:  6987702486</li>
                             <li>Email: akis.k59@gmail.com</li>
                         </ul>
