--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <div class="item-box-img">
                                 <img src="./bike1.jpg">
                             </div>
-                            <div class="item-box-head"Μηχανικα κομματια</div>
+                            <div class="item-box-head">Μηχανικα κομματια</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
@@ -144,7 +144,7 @@
                             <div class="item-box-img">
                                 <img src="./bike.jpg">
                             </div>
-                            <div class="item-box-head"Εξωτερικα κομματια</div>
+                            <div class="item-box-head">Εξωτερικα κομματια</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
@@ -154,7 +154,7 @@
                             <div class="item-box-img">
                                 <img src="./bike1.jpg">
                             </div>
-                            <div class="item-box-head"Ζαντες κ λαστιχα</div>
+                            <div class="item-box-head">Ζαντες κ λαστιχα</div>
                             <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
