--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Leopard | Katsikis Tuning & Service | Ανταλλακτικα αυτοκινητων $ μηχανων</title>
+ <style>
+        body {
+            padding-top: 56px; /* Adjust for the fixed navbar */
+        }
 
+        .sectionHead, .sectionSubHead, .sectionSubSubHead {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
