--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Leopard | Katsikis Tuning & Service | Ανταλλακτικα αυτοκινητων $ μηχανων</title>
+    <title>Katsikis | Katsikis Tuning & Service | Ανταλλακτικα αυτοκινητων $ μηχανων</title>
  <style>
         body {
             padding-top: 56px; /* Adjust for the fixed navbar */
