--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <img src="./bike1.jpg">
                             </div>
                             <div class="item-box-head">Μηχανικα κομματια</div>
-                            <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                            <div class="item-box-sub-text">test</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                                 <img src="./bike.jpg">
                             </div>
                             <div class="item-box-head">Εξωτερικα κομματια</div>
-                            <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                            <div class="item-box-sub-text">test.</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                                 <img src="./bike1.jpg">
                             </div>
                             <div class="item-box-head">Ζαντες κ λαστιχα</div>
-                            <div class="item-box-sub-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                            <div class="item-box-sub-text">test.</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                                 <img src="./bike1.jpg">
                             </div>
                             <div class="item-box-head">Ρουχα</div>
-                            <div class="item-box-sub-text">Αγορασε τωρα φουτερ >Katsikis Tuning & Service και κερδισε -10% εκπτωση στην επομενη αγορα .</div>
+                            <div class="item-box-sub-text">Αγορασε τωρα φουτερ Katsikis Tuning & Service και κερδισε -10% εκπτωση στην επομενη αγορα .</div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                             <img class="card-img-top" src="./bike.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
-                                    INR XX,XXX/-
+                                   fanari atos deksi/-
                                     <span style="color:rgb(173, 11, 11)">(39% off)</span>
                                 </p>
                             </div>
@@ -198,7 +198,7 @@
                             <img class="card-img-top" src="./bike1.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
-                                    INR XX,XXX/-
+                                    fanari atos aristero/-
                                     <span style="color:rgb(173, 11, 11)">(27% off)</span>
                                 </p>
                             </div>
