--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <img src="./bike.jpg">
                             </div>
                             <div class="item-box-head">Εξωτερικα κομματια</div>
-                            <div class="item-box-sub-text">test.</div>
+                            <div class="item-box-sub-text"></div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                                 <img src="./bike1.jpg">
                             </div>
                             <div class="item-box-head">Ζαντες κ λαστιχα</div>
-                            <div class="item-box-sub-text">test.</div>
+                            <div class="item-box-sub-text"></div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
                     </div>
@@ -314,8 +314,8 @@
                         <ul class="list-unstyled">
                             <li>Greece. Ltd.</li>
                             <li>Athens </li>
-                            <li>TK: 700XXX</li>
-                            <li>Phone:  6987702486</li>
+                            <li>TK: 210</li>
+                            <li>Phone: 6987702486</li>
                             <li>Email: akis.k59@gmail.com</li>
                         </ul>
                     </div>
@@ -327,7 +327,7 @@
 
     <footer class="footer">
         <div class="container">
-            Copyright © 2024 designed by Mr Tom
+            Copyright ©2024 designed by Mr Tom
             <span style="color:#f20056;">
               
             </span>
