--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <img src="./bike1.jpg">
                             </div>
                             <div class="item-box-head">Μηχανικα κομματια</div>
-                            <div class="item-box-sub-text">test</div>
+                            <div class="item-box-sub-text"></div>
                             <button class="btn item-box-btn">Shop Now</button>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                             <img class="card-img-top" src="./bike.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
-                                   fanari atos deksi/-
+                                   fanari atos deksi 40euro
                                     <span style="color:rgb(173, 11, 11)">(39% off)</span>
                                 </p>
                             </div>
@@ -198,7 +198,7 @@
                             <img class="card-img-top" src="./bike1.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
-                                    fanari atos aristero/-
+                                    fanari atos aristero 40 euro
                                     <span style="color:rgb(173, 11, 11)">(27% off)</span>
                                 </p>
                             </div>
