--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
         <section id="about">
             <div class="container">
-                <div class="sectionHead">About Us</div>
+                <div class="sectionHead">Σχετικά με εμάς</div>
                 <hr>
                 <br>
                 <p>
@@ -310,11 +310,11 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <h4 class="sectionSubSubHead">Mail Us</h4>
+                        <h4 class="sectionSubSubHead">Επικοινωνία</h4>
                         <ul class="list-unstyled">
-                            <li>Greece. Ltd.</li>
+                            <li>Greece </li>
                             <li>Athens </li>
-                            <li>TK: 210</li>
+                            <li>TK: 210210</li>
                             <li>Phone: 6987702486</li>
                             <li>Email: akis.k59@gmail.com</li>
                         </ul>
