--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card">
-                            <img class="card-img-top" src=".//bike.jpg" alt="bike">
+                            <img class="card-img-top" src="./bike.jpg" alt="bike">
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
