--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About
+                        <a class="nav-link" href="#about">Σχετικα
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact
+                        <a class="nav-link" href="#contact">Επικοινωνια
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
@@ -236,7 +236,7 @@
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
-                                    <span style="color:rgb(173, 11, 11)">(45% off)</span>
+                                    <span style="color:rgb(173, 11, 11)">(45% εκπτωση)</span>
                                 </p>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                             <div class="card-footer">
                                 <p class="card-text">
                                     INR XX,XXX/-
-                                    <span style="color:rgb(173, 11, 11)">(17% off)</span>
+                                    <span style="color:rgb(173, 11, 11)">(17% εκπτωση)</span>
                                 </p>
                             </div>
                         </div>
@@ -280,6 +280,7 @@
                 <p>
                    Katsikis Tuning and Service
                     6987702486
+                    Athens
                 </p>
             </div>
         </section>
